--- a/projects/portfolio_docs/contact.html
+++ b/projects/portfolio_docs/contact.html
@@ -9,8 +9,8 @@
     <meta name="description" content="Want to build your online presence? Let me help 
   you plan, design, build and package you site to build an online presence">
     <meta name="author" content="Vladimir Parrales">
-    <link rel="stylesheet" href="portfolio.css">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <title>Vladimir's Portfolio</title>
 </head>
 
@@ -28,7 +28,7 @@
         </header>
         <main>
             <p class="firstletter textleft">
-                Interested in creating a website? Get in touch with me by filling out the form below. There are a lot of
+                Interested in creating a website? Get in touch with us by filling out the form below. There are a lot of
                 parts that go into developing a great site. To develop a great site planning with sitemaps and wireframes is the first
                 step. Know that I will go the extra mile in creating the best site for your needs. Take a look at the projects
                 page to see examples of past projects that I have worked on. We can always create a custom tailored site for your specific
@@ -57,7 +57,7 @@
                     <br>
                 </form>
             </fieldset>
-            </div>
+            
         </main>
         <br>
         <footer>
