--- a/projects/portfolio_docs/index.html
+++ b/projects/portfolio_docs/index.html
@@ -9,8 +9,8 @@
     <meta name="description" content="Want to build your online presence? Let me help 
   you plan, design, build and package you site to build an online presence">
     <meta name="author" content="Vladimir Parrales">
-    <link rel="stylesheet" href="portfolio.css">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <title>Vladimir's Portfolio</title>
 </head>
 
@@ -36,7 +36,7 @@
             <h1>Vladimir Parrales</h1>
         </header>
         <main>
-            <p class="firstletter maininfo textleft"><img id="vlad" src="vladsmallweb.jpg"width="140" height="170" alt="Vladimir">
+            <p class="firstletter maininfo textleft"><img id="vlad" src="images/vladsmallweb.jpg" width="140" height="170" alt="Vladimir">
                 Hello I am Vladimir, an aspiring web designer. I was born in Nicaragua and I
                 have been living in San Francisco since I was five years old. I love to travel and I enjoy being out
                 doors.
@@ -69,8 +69,8 @@
                 fantastic looking websites. I am a life long learner who is always interested in expanding my skills
                 with a great attitude.
             </p>
-            <p class="textleft"><small><a target="_blank" href="https://icons8.com/icons/set/rgb-circle-1">Color Wheel icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-                <a target="_blank" href="https://icons8.com/icons/set/pdf">PDF icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></small></p>
+            <p class="textleft iconcredit"><small><a target="_blank" href="https://icons8.com/icons/set/rgb-circle-1" rel="noopener">Color Wheel icon</a> icon by <a target="_blank" href="https://icons8.com" rel="noopener">Icons8 |</a>
+                <a target="_blank" href="https://icons8.com/icons/set/pdf" rel="noopener">PDF icon</a> icon by <a target="_blank" href="https://icons8.com" rel="noopener">Icons8</a></small></p>
         </main>
         <footer>
             <ul>
