--- a/projects/portfolio_docs/projects.html
+++ b/projects/portfolio_docs/projects.html
@@ -10,8 +10,8 @@
   the projects I have build for other clients. Let me help 
   you plan, design, build and package you site to build an online presence">
     <meta name="author" content="Vladimir Parrales">
-    <link rel="stylesheet" href="portfolio.css">
-    <link rel="shortcut icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <title>Projects</title>
 </head>
 
@@ -37,13 +37,16 @@
                 Below are three examples of websites I have developed using HTML, CSS and javaScript. HTML gives
                 structure to your page, CSS adds style
                 to your page and javaScript will add interactivity so your audience can interact with your page.
-                Click on each icon to see the work that I have done with each language. 
+                Click on each icon below to see the work that I have done with each language. 
             </p>
+            <p class="textleft iconcredit"><small>The following icons were provided by <a target="_blank" href="https://fontawesome.com/" rel="noopener">Font Awesome |</a> <a target="_blank" href="https://fontawesome.com/license" rel="noopener">Font Awesome Icons Licence</a></small></p>
             <ul class="projects">
-                <li><a href="https://vparrales.github.io/cnit132hwfinal/index.html" target="_blank" rel="noopener"><img src="html5-brands.svg" alt="HTML 5 logo" width="75" height="75"></a></li>
-                <li><a href="https://vparrales.github.io/cnit132hwfinal/meetup.html" target="_blank"><img src="css3-alt-brands.svg" alt="CSS 3 logo" width="75" height="75"></a></li>
-                <li><a href="https://vparrales.github.io/mission.html" target="_blank"><img src="js-square-brands.svg" alt="javaScript logo" width="75" height="75"></a></li>
+                <li><a href="https://vparrales.github.io/cnit132hwfinal/index.html" target="_blank" rel="noopener"><img src="images/html5-brands.svg" alt="HTML 5 logo" width="75" height="75"></a></li>
+                <li><a href="https://vparrales.github.io/cnit132hwfinal/meetup.html" target="_blank"><img src="images/css3-alt-brands.svg" alt="CSS 3 logo" width="75" height="75"></a></li>
+                <li><a href="https://vparrales.github.io/mission.html" target="_blank"><img src="images/js-square-brands.svg" alt="javaScript logo" width="75" height="75"></a></li>
             </ul>
+            
+            
         </main>
         <footer>
             <ul>
