--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -69,8 +69,8 @@
                 fantastic looking websites. I am a life long learner who is always interested in expanding my skills
                 with a great attitude.
             </p>
-            <p class="textleft iconcredit"><small><a target="_blank" href="https://icons8.com/icons/set/rgb-circle-1" rel="noopener">Color Wheel icon</a> icon by <a target="_blank" href="https://icons8.com" rel="noopener">Icons8 |</a>
-                <a target="_blank" href="https://icons8.com/icons/set/pdf" rel="noopener">PDF icon</a> icon by <a target="_blank" href="https://icons8.com" rel="noopener">Icons8</a></small></p>
+            <p class="textleft iconcredit"><small>The favicon <a target="_blank" href="https://icons8.com/icons/set/rgb-circle-1" rel="noopener">Color Wheel icon</a> was provided by <a target="_blank" href="https://icons8.com" rel="noopener">Icons8 |</a>
+                The resume <a target="_blank" href="https://icons8.com/icons/set/pdf" rel="noopener">PDF icon</a> was provided by <a target="_blank" href="https://icons8.com" rel="noopener">Icons8</a></small></p>
         </main>
         <footer>
             <ul>
