worked on jQuery

--- a/practice/javascript/week_7/jquery/firstwebpage.html
+++ b/practice/javascript/week_7/jquery/firstwebpage.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+
+    <button id="light-off"> Turn off the lights</button>
+    <button id="light-on"> Turn on the lights!</button>
+
     <p>Hello there</p>
 
     <!-- 2 different types of HTML Elements. Tags are the opening and closing tags. An element is made up of both opening and closing tag.-->
@@ -41,7 +45,7 @@
     <!-- Anchor Tags used for linking to other parts of the webpage or other webpages -->
     <a href="http://www.google.com" download target="_blank">Click here to go
             to google</a><button>Click me</button>
-
+<button id="recycleButton">Recycle Bin</button>
             <script src="script.js"></script>
 </body>
 
